--- a/styleAquatec.css
+++ b/styleAquatec.css
@@ -1,3 +1,6 @@
+*{font-family: Arial;
+}
+
 body{
     margin: 0;
     padding: 0;
@@ -51,6 +54,7 @@ body{
 }
 
 .banner .container {
+
     height: 577px;
     align-items: center;
     justify-content: center;
@@ -87,4 +91,20 @@ body{
 .box img{
     width: 170px;
 }
+.box h4{
+    color: #ce477f;
+    font-weight: bold;
+    
+}
+.footer{
+    width: 100%;
+    height: 100px;
+    background-color: #32b9cd;
+    color: white;
 
+}
+.footer .container  {
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
